--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,51 +2,49 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-    :root {
-        --background: 0 0% 100%;
-        --foreground: 240 10% 3.9%;
-        --card: 0 0% 100%;
-        --card-foreground: 240 10% 3.9%;
-        --popover: 0 0% 100%;
-        --popover-foreground: 240 10% 3.9%;
-        --primary: 240 5.9% 10%;
-        --primary-foreground: 0 0% 98%;
-        --secondary: 240 4.8% 95.9%;
-        --secondary-foreground: 240 5.9% 10%;
-        --muted: 240 4.8% 95.9%;
-        --muted-foreground: 240 3.8% 46.1%;
-        --accent: 240 4.8% 95.9%;
-        --accent-foreground: 240 5.9% 10%;
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 0 0% 98%;
-        --border: 240 5.9% 90%;
-        --input: 240 5.9% 90%;
-        --ring: 240 5.9% 10%;
-        --radius: 1rem;
-    }
-
-    .dark {
-        --background: 240 10% 3.9%;
-        --foreground: 0 0% 98%;
-        --card: 0 0% 8%;
-        --card-foreground: 0 0% 98%;
-        --popover: 240 10% 3.9%;
-        --popover-foreground: 0 0% 98%;
-        --primary: 0 0% 98%;
-        --primary-foreground: 240 5.9% 10%;
-        --secondary: 240 3.7% 8.9%;
-        --secondary-foreground: 0 0% 98%;
-        --muted: 240 3.7% 15.9%;
-        --muted-foreground: 240 5% 64.9%;
-        --accent: 240 3.7% 15.9%;
-        --accent-foreground: 0 0% 98%;
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 0 0% 98%;
-        --border: 240 3.7% 15.9%;
-        --input: 240 3.7% 15.9%;
-        --ring: 240 4.9% 83.9%;
-    }
+:root {
+    --background: 262.1 0% 95%;
+    --foreground: 262.1 0% 0%;
+    --card: 262.1 0% 90%;
+    --card-foreground: 262.1 0% 10%;
+    --popover: 262.1 0% 95%;
+    --popover-foreground: 262.1 95% 0%;
+    --primary: 262.1 88.3% 57.8%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 262.1 10% 70%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 224.10000000000002 10% 85%;
+    --muted-foreground: 262.1 0% 35%;
+    --accent: 224.10000000000002 10% 80%;
+    --accent-foreground: 262.1 0% 10%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 262.1 0% 90%;
+    --border: 262.1 20% 50%;
+    --input: 262.1 20% 18%;
+    --ring: 262.1 88.3% 57.8%;
+    --radius: 1rem;
+}
+.dark {
+    --background: 262.1 10% 5%;
+    --foreground: 262.1 0% 90%;
+    --card: 262.1 0% 0%;
+    --card-foreground: 262.1 0% 90%;
+    --popover: 262.1 10% 5%;
+    --popover-foreground: 262.1 0% 90%;
+    --primary: 262.1 88.3% 57.8%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 262.1 10% 10%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 224.10000000000002 10% 15%;
+    --muted-foreground: 262.1 0% 60%;
+    --accent: 224.10000000000002 10% 15%;
+    --accent-foreground: 262.1 0% 90%;
+    --destructive: 0 50% 30%;
+    --destructive-foreground: 262.1 0% 90%;
+    --border: 262.1 20% 18%;
+    --input: 262.1 20% 18%;
+    --ring: 262.1 88.3% 57.8%;
+    --radius: 1rem;
 }
 
 @layer base {
@@ -54,6 +52,6 @@
         @apply border-border;
     }
     body {
-        @apply bg-background text-foreground font-mono;
+        @apply bg-background font-mono text-foreground;
     }
 }
